--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <span></span>
                 <a href="###" >　 </a>
             </div>
-            <h1>欢迎光临九征蔬菜瓜果农场</h1>
+            <h1>欢迎光临九征蔬菜瓜果农场！</h1>
             </div>		 
             <a><img src="/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
         </div>
