调整css和图片访问路径

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="description" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="keywords" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="author" content="欢迎光临九征蔬菜瓜果农场" />
-<link rel="stylesheet" type="text/css" href="/css/css.css" />
-<link rel="stylesheet" type="text/css" href="/css/main.css" />
+<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/css/css.css" />
+<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/css/main.css" />
 
 </head>
 <body>
@@ -21,7 +21,7 @@
             </div>
             <h1>欢迎光临九征蔬菜瓜果农场！</h1>
             </div>		 
-            <a><img src="/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
+            <a><img src="images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
         </div>
         <div id="head">		 
             <ul id="nav" style=" width:780px;">
@@ -41,7 +41,7 @@
         </div>
         <div id="KinSlideshow" > 
                 <a href="/index.html">
-                    <img src="/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
+                    <img src="/sujiuzheng.com/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
                 </a> 
         </div>
         <div id="main">
@@ -94,67 +94,67 @@
                     <ul id="drawimg">
                         <li style="width:158px; height:183px;">
                             <a href="javascript:void(0)" class="imgbox" target="_blank">
-                                <img src="/images/946cf95507e69210.jpg.thumb.jpg"   alt="大拇指西瓜" height="150" width="112" style="padding-right: 19px; padding-left: 19px;">
+                                <img src="/sujiuzheng.com/images/946cf95507e69210.jpg.thumb.jpg"   alt="大拇指西瓜" height="150" width="112" style="padding-right: 19px; padding-left: 19px;">
                             </a>
                             <h4><a href="javascript:void(0)" title="大拇指西瓜">大拇指西瓜</a></h4>
                         </li>
                         <li style="width:158px; height:183px;">
                             <a href="javascript:void(0)" class="imgbox" target="_blank">
-                                <img src="/images/49316b7262133672.jpg.thumb.jpg"   alt="瓜之宝" width="150" height="100" style="padding-top: 25px; padding-bottom: 25px;">
+                                <img src="/sujiuzheng.com/images/49316b7262133672.jpg.thumb.jpg"   alt="瓜之宝" width="150" height="100" style="padding-top: 25px; padding-bottom: 25px;">
                             </a>
                             <h4><a href="javascript:void(0)" title="瓜之宝">瓜之宝</a></h4>
                         </li>
                         <li style="width:158px; height:183px;">
                             <a href="javascript:void(0)" class="imgbox" target="_blank">
-                                <img src="/images/ebe008b1032bb715.jpg.thumb.jpg"   alt="甜思美" height="150" width="120" style="padding-right: 15px; padding-left: 15px;">
+                                <img src="/sujiuzheng.com/images/ebe008b1032bb715.jpg.thumb.jpg"   alt="甜思美" height="150" width="120" style="padding-right: 15px; padding-left: 15px;">
                             </a>
                             <h4><a href="javascript:void(0)" title="甜思美">甜思美</a></h4>
                         </li>
                         <li style="width:158px; height:183px;">
                             <a href="javascript:void(0)" class="imgbox" target="_blank">
-                                <img src="/images/9a7b44afe1bed08e.jpg.thumb.jpg"   alt="甜思妮" width="150" height="99" style="padding-top: 25px; padding-bottom: 25px;">
+                                <img src="/sujiuzheng.com/images/9a7b44afe1bed08e.jpg.thumb.jpg"   alt="甜思妮" width="150" height="99" style="padding-top: 25px; padding-bottom: 25px;">
                             </a>
                             <h4><a href="javascript:void(0)" title="甜思妮">甜思妮</a></h4>
                         </li>
                         <li style="width:158px; height:183px;">
                             <a href="javascript:void(0)" class="imgbox" target="_blank">
-                                <img src="/images/0d1d9744f00303c2.jpg.thumb.jpg"   alt="绿宝石" width="150" height="97" style="padding-top: 26px; padding-bottom: 26px;">
+                                <img src="/sujiuzheng.com/images/0d1d9744f00303c2.jpg.thumb.jpg"   alt="绿宝石" width="150" height="97" style="padding-top: 26px; padding-bottom: 26px;">
                             </a>
                             <h4><a href="javascript:void(0)" title="绿宝石">绿宝石</a></h4>
                         </li>
                         <li style="width:158px; height:183px;">
                             <a href="javascript:void(0)" class="imgbox" target="_blank">
-                                <img src="/images/cea035b27dd9a128.jpg.thumb.jpg"   alt="黑珍珠" width="150" height="120" style="padding-top: 15px; padding-bottom: 15px;">
+                                <img src="/sujiuzheng.com/images/cea035b27dd9a128.jpg.thumb.jpg"   alt="黑珍珠" width="150" height="120" style="padding-top: 15px; padding-bottom: 15px;">
                             </a>
                             <h4><a href="javascript:void(0)" title="黑珍珠">黑珍珠</a></h4>
                         </li>
                         <li style="width:158px; height:183px;">
                             <a href="javascript:void(0)" class="imgbox" target="_blank">
-                                <img src="/images/41794fee8530ebba.jpg.thumb.jpg"   alt="日本羊角脆" width="150" height="112" style="padding-top: 19px; padding-bottom: 19px;">
+                                <img src="/sujiuzheng.com/images/41794fee8530ebba.jpg.thumb.jpg"   alt="日本羊角脆" width="150" height="112" style="padding-top: 19px; padding-bottom: 19px;">
                             </a>
                             <h4><a href="javascript:void(0)" title="日本羊角脆">日本羊角脆</a></h4>
                         </li>
                         <li style="width:158px; height:183px;">
                             <a href="javascript:void(0)" class="imgbox" target="_blank">
-                                <img src="/images/90ad1fec9d2b140e.jpg.thumb.jpg"   alt="清香脆玉" width="150" height="145" style="padding-top: 2px; padding-bottom: 2px;">
+                                <img src="/sujiuzheng.com/images/90ad1fec9d2b140e.jpg.thumb.jpg"   alt="清香脆玉" width="150" height="145" style="padding-top: 2px; padding-bottom: 2px;">
                             </a>
                             <h4><a href="javascript:void(0)" title="清香脆玉">清香脆玉</a></h4>
                         </li>
                         <li style="width:158px; height:183px;">
                             <a href="javascript:void(0)" class="imgbox" target="_blank">
-                                <img src="/images/9c8ecf1e6391069a.jpg.thumb.jpg"   alt="雪梨" width="150" height="112" style="padding-top: 19px; padding-bottom: 19px;">
+                                <img src="/sujiuzheng.com/images/9c8ecf1e6391069a.jpg.thumb.jpg"   alt="雪梨" width="150" height="112" style="padding-top: 19px; padding-bottom: 19px;">
                             </a>
                             <h4><a href="javascript:void(0)" title="雪梨">雪梨</a></h4>
                         </li>
                         <li style="width:158px; height:183px;">
                             <a href="javascript:void(0)" class="imgbox" target="_blank">
-                                <img src="/images/3771a5768b52ecf3.jpg.thumb.jpg"   alt="豫田脆" width="150" height="131" style="padding-top: 9px; padding-bottom: 9px;">
+                                <img src="/sujiuzheng.com/images/3771a5768b52ecf3.jpg.thumb.jpg"   alt="豫田脆" width="150" height="131" style="padding-top: 9px; padding-bottom: 9px;">
                             </a>
                             <h4><a href="javascript:void(0)" title="豫田脆">豫田脆</a></h4>
                         </li>
                         <li style="width:158px; height:183px;">
                             <a href="javascript:void(0)" class="imgbox" target="_blank">
-                                <img src="/images/242d5675ac8d9cdb.jpg.thumb.jpg"   alt="豫田香" height="150" width="110" style="padding-right: 20px; padding-left: 20px;">
+                                <img src="/sujiuzheng.com/images/242d5675ac8d9cdb.jpg.thumb.jpg"   alt="豫田香" height="150" width="110" style="padding-right: 20px; padding-left: 20px;">
                             </a>
                             <h4><a href="javascript:void(0)" title="豫田香">豫田香</a></h4>
                         </li>
