--- a/fanqie.html
+++ b/fanqie.html
@@ -6,8 +6,8 @@
 <meta name="description" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="keywords" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="author" content="欢迎光临九征蔬菜瓜果农场" />
-<link rel="stylesheet" type="text/css" href="css/css.css" />
-<link rel="stylesheet" type="text/css" href="css/main.css" />
+<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/css/css.css" />
+<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/css/main.css" />
 
 </head>
 <body>
@@ -21,27 +21,27 @@
             </div>
             <h1>欢迎光临九征蔬菜瓜果农场</h1>
             </div>		 
-            <a><img src="/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
+            <a><img src="/sujiuzheng.com/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
         </div>
         <div id="head">		 
             <ul id="nav" style=" width:780px;">
                 <li class="home"></li>
-                <li class="class1" id="nav_8"><a href="/index.html">首页</a></li>
+                <li class="class1" id="nav_8"><a href="/sujiuzheng.com/index.html">首页</a></li>
                 <li class="line"></li>
-                 <li class="class1" id="nav_8"><a href="/tiangua.html">甜瓜</a></li>
+                 <li class="class1" id="nav_8"><a href="/sujiuzheng.com/tiangua.html">甜瓜</a></li>
                 <li class="line"></li>
-                 <li class="class1" id="nav_8"><a href="/fanqie.html">特色番茄</a></li>
+                 <li class="class1" id="nav_8"><a href="/sujiuzheng.com/fanqie.html">特色番茄</a></li>
                 <li class="line"></li>
-                 <li class="class1" id="nav_8"><a href="/xigua.html">礼品西瓜</a></li>
+                 <li class="class1" id="nav_8"><a href="/sujiuzheng.com/xigua.html">礼品西瓜</a></li>
                 <li class="line"></li>
-                 <li class="class1" id="nav_8"><a href="/jianjie.html">农场简介</a></li>
+                 <li class="class1" id="nav_8"><a href="/sujiuzheng.com/jianjie.html">农场简介</a></li>
                 <li class="line"></li>
             </ul>
             <div class="clear"></div>
         </div>
         <div id="KinSlideshow" > 
-                <a href="/index.html">
-                    <img src="/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
+                <a href="/sujiuzheng.com/index.html">
+                    <img src="/sujiuzheng.com/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
                 </a> 
         </div>
         <div id="main">
@@ -93,7 +93,7 @@
                     <div id="plug2">
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="甜思美" ><img src="/images/ebe008b1032bb715.jpg.thumb.jpg" alt="甜思美" title="甜思美"></a>
+                                <a href="javascript:void(0)" title="甜思美" ><img src="/sujiuzheng.com/images/ebe008b1032bb715.jpg.thumb.jpg" alt="甜思美" title="甜思美"></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
@@ -102,12 +102,12 @@
                                 <li><b>分类 : </b><span><a href="/fanqie.html">特色番茄</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="甜思妮" ><img src="/images/9a7b44afe1bed08e.jpg.thumb.jpg" alt="甜思妮" title="甜思妮" ></a>
+                                <a href="javascript:void(0)" title="甜思妮" ><img src="/sujiuzheng.com/images/9a7b44afe1bed08e.jpg.thumb.jpg" alt="甜思妮" title="甜思妮" ></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
@@ -116,12 +116,12 @@
                                 <li><b>分类 : </b><span><a href="/fanqie.html">特色番茄</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="绿宝石" ><img src="/images/0d1d9744f00303c2.jpg.thumb.jpg" alt="绿宝石" title="绿宝石"></a>
+                                <a href="javascript:void(0)" title="绿宝石" ><img src="/sujiuzheng.com/images/0d1d9744f00303c2.jpg.thumb.jpg" alt="绿宝石" title="绿宝石"></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
@@ -130,12 +130,12 @@
                                 <li><b>分类 : </b><span><a href="/fanqie.html">特色番茄</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="黑珍珠" ><img src="/images/cea035b27dd9a128.jpg.thumb.jpg" alt="黑珍珠" title="黑珍珠" ></a>
+                                <a href="javascript:void(0)" title="黑珍珠" ><img src="/sujiuzheng.com/images/cea035b27dd9a128.jpg.thumb.jpg" alt="黑珍珠" title="黑珍珠" ></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
@@ -144,7 +144,7 @@
                                 <li><b>分类 : </b><span><a href="/fanqie.html">特色番茄</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                           
