--- a/jianjie.html
+++ b/jianjie.html
@@ -6,8 +6,8 @@
 <meta name="description" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="keywords" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="author" content="欢迎光临九征蔬菜瓜果农场" />
-<link rel="stylesheet" type="text/css" href="css/css.css" />
-<link rel="stylesheet" type="text/css" href="css/main.css" />
+<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/css/css.css" />
+<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/css/main.css" />
 
 </head>
 <body>
@@ -21,7 +21,7 @@
             </div>
             <h1>欢迎光临九征蔬菜瓜果农场</h1>
             </div>		 
-            <a><img src="/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
+            <a><img src="/sujiuzheng.com/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
         </div>
         <div id="head">		 
             <ul id="nav" style=" width:780px;">
@@ -41,7 +41,7 @@
         </div>
         <div id="KinSlideshow" > 
                 <a href="http://www.sujiuzheng.com">
-                    <img src="/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
+                    <img src="/sujiuzheng.com/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
                 </a> 
         </div>
         <div id="main">
