--- a/tiangua.html
+++ b/tiangua.html
@@ -6,8 +6,8 @@
 <meta name="description" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="keywords" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="author" content="欢迎光临九征蔬菜瓜果农场" />
-<link rel="stylesheet" type="text/css" href="css/css.css" />
-<link rel="stylesheet" type="text/css" href="css/main.css" />
+<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/css/css.css" />
+<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/css/main.css" />
 
 </head>
 <body>
@@ -21,7 +21,7 @@
             </div>
             <h1>欢迎光临九征蔬菜瓜果农场</h1>
             </div>		 
-            <a><img src="/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
+            <a><img src="/sujiuzheng.com/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
         </div>
         <div id="head">		 
             <ul id="nav" style=" width:780px;">
@@ -41,7 +41,7 @@
         </div>
         <div id="KinSlideshow" > 
                 <a href="/index.html">
-                    <img src="/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
+                    <img src="/sujiuzheng.com/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
                 </a> 
         </div>
         <div id="main">
@@ -93,7 +93,7 @@
                     <div id="plug2">
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="日本羊角脆" ><img src="/images/41794fee8530ebba.jpg.thumb.jpg" alt="日本羊角脆" title="日本羊角脆" width="150" height="112" style="padding-top: 19px; padding-bottom: 19px;"></a>
+                                <a href="javascript:void(0)" title="日本羊角脆" ><img src="/sujiuzheng.com/images/41794fee8530ebba.jpg.thumb.jpg" alt="日本羊角脆" title="日本羊角脆" width="150" height="112" style="padding-top: 19px; padding-bottom: 19px;"></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
@@ -102,12 +102,12 @@
                                 <li><b>分类 : </b><span><a href="/tiangua.html">甜瓜</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="清香脆玉" ><img src="/images/90ad1fec9d2b140e.jpg.thumb.jpg" alt="清香脆玉" title="清香脆玉" width="150" height="145" style="padding-top: 2px; padding-bottom: 2px;"></a>
+                                <a href="javascript:void(0)" title="清香脆玉" ><img src="/sujiuzheng.com/images/90ad1fec9d2b140e.jpg.thumb.jpg" alt="清香脆玉" title="清香脆玉" width="150" height="145" style="padding-top: 2px; padding-bottom: 2px;"></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
@@ -116,12 +116,12 @@
                                 <li><b>分类 : </b><span><a href="/tiangua.html">甜瓜</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="雪梨" ><img src="/images/9c8ecf1e6391069a.jpg.thumb.jpg" alt="雪梨" title="雪梨" width="150" height="112" style="padding-top: 19px; padding-bottom: 19px;"></a>
+                                <a href="javascript:void(0)" title="雪梨" ><img src="/sujiuzheng.com/images/9c8ecf1e6391069a.jpg.thumb.jpg" alt="雪梨" title="雪梨" width="150" height="112" style="padding-top: 19px; padding-bottom: 19px;"></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
@@ -130,12 +130,12 @@
                                 <li><b>分类 : </b><span><a href="/tiangua.html">甜瓜</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="豫田脆" ><img src="/images/3771a5768b52ecf3.jpg.thumb.jpg" alt="豫田脆" title="豫田脆" width="150" height="131" style="padding-top: 9px; padding-bottom: 9px;"></a>
+                                <a href="javascript:void(0)" title="豫田脆" ><img src="/sujiuzheng.com/images/3771a5768b52ecf3.jpg.thumb.jpg" alt="豫田脆" title="豫田脆" width="150" height="131" style="padding-top: 9px; padding-bottom: 9px;"></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
@@ -144,12 +144,12 @@
                                 <li><b>分类 : </b><span><a href="/tiangua.html">甜瓜</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="豫田香" ><img src="/images/242d5675ac8d9cdb.jpg.thumb.jpg" alt="豫田香" title="豫田香" height="150" width="110" style="padding-right: 20px; padding-left: 20px;"></a>
+                                <a href="javascript:void(0)" title="豫田香" ><img src="/sujiuzheng.com/images/242d5675ac8d9cdb.jpg.thumb.jpg" alt="豫田香" title="豫田香" height="150" width="110" style="padding-right: 20px; padding-left: 20px;"></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
@@ -158,7 +158,7 @@
                                 <li><b>分类 : </b><span><a href="/tiangua.html">甜瓜</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>      
                     </div>
