--- a/xigua.html
+++ b/xigua.html
@@ -6,8 +6,8 @@
 <meta name="description" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="keywords" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="author" content="欢迎光临九征蔬菜瓜果农场" />
-<link rel="stylesheet" type="text/css" href="css/css.css" />
-<link rel="stylesheet" type="text/css" href="css/main.css" />
+<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/css/css.css" />
+<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/css/main.css" />
 
 </head>
 <body>
@@ -21,7 +21,7 @@
             </div>
             <h1>欢迎光临九征蔬菜瓜果农场</h1>
             </div>		 
-            <a><img src="images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
+            <a><img src="/sujiuzheng.com/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
         </div>
         <div id="head">		 
             <ul id="nav" style=" width:780px;">
@@ -41,7 +41,7 @@
         </div>
         <div id="KinSlideshow" > 
                 <a href="/index.html">
-                    <img src="/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
+                    <img src="/sujiuzheng.com/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
                 </a> 
         </div>
         <div id="main">
@@ -93,7 +93,7 @@
                     <div id="plug2">
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="大拇指西瓜" ><img src="/images/946cf95507e69210.jpg.thumb.jpg" alt="大拇指西瓜" title="大拇指西瓜"></a>
+                                <a href="javascript:void(0)" title="大拇指西瓜" ><img src="/sujiuzheng.com/images/946cf95507e69210.jpg.thumb.jpg" alt="大拇指西瓜" title="大拇指西瓜"></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
@@ -102,12 +102,12 @@
                                 <li><b>分类 : </b><span><a href="/xigua.html">礼品西瓜</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                         <dl style="height:165px;">
                             <dt style="width:158px;">
-                                <a href="javascript:void(0)" title="瓜之宝" ><img src="/images/49316b7262133672.jpg.thumb.jpg" alt="瓜之宝" title="瓜之宝" ></a>
+                                <a href="javascript:void(0)" title="瓜之宝" ><img src="/sujiuzheng.com/images/49316b7262133672.jpg.thumb.jpg" alt="瓜之宝" title="瓜之宝" ></a>
                             </dt>
                             <dd style="width:167px;">
                                 <ul>
@@ -116,7 +116,7 @@
                                 <li><b>分类 : </b><span><a href="/xigua.html">礼品西瓜</a></span></li>
                                 <li><b>日期 : </b><span>2014-01-17</span></li>
                                 </ul>
-                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
+                                <div class="detail"><a href="javascript:void(0)" title="详细介绍" ><img src="/sujiuzheng.com/images/picd.gif" title="详细介绍" alt="详细介绍"></a></div>
                             </dd>
                         </dl>
                     </div>
