--- a/resources/jianjie.html
+++ b/resources/jianjie.html
@@ -6,8 +6,8 @@
 <meta name="description" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="keywords" content="欢迎光临九征蔬菜瓜果农场" />
 <meta name="author" content="欢迎光临九征蔬菜瓜果农场" />
-<link rel="stylesheet" type="text/css" href="/resources/css/css.css" />
-<link rel="stylesheet" type="text/css" href="/resources/css/main.css" />
+<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/resources/css/css.css" />
+<link rel="stylesheet" type="text/css" href="/sujiuzheng.com/resources/css/main.css" />
 
 </head>
 <body>
@@ -21,27 +21,27 @@
             </div>
             <h1>欢迎光临九征蔬菜瓜果农场</h1>
             </div>		 
-            <a><img src="/resources/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
+            <a><img src="/sujiuzheng.com/resources/images/9cade81d13cdd7a2.gif" style="margin-top:5px; margin-left:5px;"/></a>
         </div>
         <div id="head">		 
             <ul id="nav" style=" width:780px;">
                 <li class="home"></li>
-                <li class="class1" id="nav_8"><a href="/index.html">首页</a></li>
+                <li class="class1" id="nav_8"><a href="/sujiuzheng.com/index.html">首页</a></li>
                 <li class="line"></li>
-                 <li class="class1" id="nav_8"><a href="/resources/tiangua.html">甜瓜</a></li>
+                 <li class="class1" id="nav_8"><a href="/sujiuzheng.com/resources/tiangua.html">甜瓜</a></li>
                 <li class="line"></li>
-                 <li class="class1" id="nav_8"><a href="/resources/fanqie.html">特色番茄</a></li>
+                 <li class="class1" id="nav_8"><a href="/sujiuzheng.com/resources/fanqie.html">特色番茄</a></li>
                 <li class="line"></li>
-                 <li class="class1" id="nav_8"><a href="/resources/xigua.html">礼品西瓜</a></li>
+                 <li class="class1" id="nav_8"><a href="/sujiuzheng.com/resources/xigua.html">礼品西瓜</a></li>
                 <li class="line"></li>
-                 <li class="class1" id="nav_8"><a href="/resources/jianjie.html">农场简介</a></li>
+                 <li class="class1" id="nav_8"><a href="/sujiuzheng.com/resources/jianjie.html">农场简介</a></li>
                 <li class="line"></li>
             </ul>
             <div class="clear"></div>
         </div>
         <div id="KinSlideshow" > 
-                <a href="/index.html">
-                    <img src="/resources/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
+                <a href="/sujiuzheng.com/index.html">
+                    <img src="/sujiuzheng.com/resources/images/48a4774e56686a79.jpg" width="990" height="200" alt="" style="border: 0px;">
                 </a> 
         </div>
         <div id="main">
@@ -63,7 +63,7 @@
 	        </div>
             <div id="right">
                 <h3 class="title"> 
-                   <!-- <a href="/index.php?c=about&amp;id=2" class="more" target="self">更多</a> -->
+                   <!-- <a href="/sujiuzheng.com/index.php?c=about&amp;id=2" class="more" target="self">更多</a> -->
                     <span>农场简介</span>
                 </h3>
                 <div class="text" style="height: 237px;">
@@ -76,7 +76,7 @@
         </div>
         <div id="footer">
             <div class="nav">
-                <a href="/resources/jianjie.html">农场简介</a>&nbsp;&nbsp;  联系电话 15550137839
+                <a href="/sujiuzheng.com/resources/jianjie.html">农场简介</a>&nbsp;&nbsp;  联系电话 15550137839
             </div>
        </div>
 </div>
